--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -20,14 +20,14 @@
   "AuthenticationPage.confirmSignupInfoText": "Please check that your information is correct.",
   "AuthenticationPage.confirmSignupWithIdpTitle": "Sign up with {idp}",
   "AuthenticationPage.emailAlreadyInUse": "An account with this email address already exists. Try logging in instead.",
-  "AuthenticationPage.fixEmail": "Whoops, typo in your email? {fixEmailLink}.",
+  "AuthenticationPage.fixEmail": "Whoops, typo in your email? {fixEmailLink}",
   "AuthenticationPage.fixEmailLinkText": "Fix it",
   "AuthenticationPage.loginFailed": "The email and password you entered did not match our records. Please double-check and try again.",
   "AuthenticationPage.loginLinkText": "Login",
   "AuthenticationPage.loginWithFacebook": "Log in with Facebook",
   "AuthenticationPage.loginWithGoogle": "Log in with Google",
   "AuthenticationPage.or": "or",
-  "AuthenticationPage.resendEmail": "Didn't get the email? {resendEmailLink}.",
+  "AuthenticationPage.resendEmail": "Didn't get the email? {resendEmailLink}",
   "AuthenticationPage.resendEmailLinkText": "Resend it",
   "AuthenticationPage.resendFailed": "Resending verification email failed. Please try again.",
   "AuthenticationPage.resendFailedTooManyRequests": "The maximum of 5 verification emails has been reached. Please try again tomorrow.",
