--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1119,11 +1119,12 @@
   "UserNav.profileSettingsPage": "Edit user profile",
   "UserNav.contactDetailsPage" : "Account settings",
   "signupFormForm.phonePlaceholder" :"99999 55555",
-  "signupFormForm.phoneLabel" : "Phone number",
-  "SignupForm.phoneRequired" : "You need to add a phone number",
+  "SignupForm.phoneLabel" : "Phone number",
+  "SignupForm.phoneRequired" : "You need to add a valid phone number",
   "SignupForm.sendOtp" : "Send Otp",
   "SignupForm.verify" : "Verify",
   "signupFormForm.otpLabel" : "Enter the otp send to your mobile",
   "signupFormForm.otpPlaceholder" :"1111",
-  "SignupForm.otpRequired" : "Otp is required to signup"
+  "SignupForm.otpRequired" : "Otp is required to signup",
+  "SignupForm.otpErrMsg": "Invalid OTP"
 }
