--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1146,6 +1146,54 @@
   "ProfileSettingsForm.stateRequired":"Enter your state",
   "ProfileSettingsForm.zipCodePlaceholder":"Postal / ZIP code",
   "ProfileSettingsForm.zipCodeRequired":"Enter valid postal/zip code",
-  "ProfileSettingsForm.phone" :"Phone"
-
+  "ProfileSettingsForm.phone" :"Phone",
+  "profileSettingForm.phoneRequired" :"You need to add a valid phone number",
+  "ProfileSettingsForm.otpRequired":"Provide OTP sent to your mobile",
+  "ProfileSettingsForm.otpLabel":"OTP",
+  "ProfileSettingsForm.otpPlaceholder":"OTP",
+  "ProfileSettingsForm.otpErrMsg":"Invalid OTP",
+  "ProfileSettingsForm.sendOtp":"Send OTP",
+  "ProfileSettingsForm.verification":"Verification *",
+  "ProfileSettingsForm.addMore":"+ Add More",
+  "ProfileSettingsForm.endTimeRequired": "End time require",
+  "ProfileSettingsForm.endTimeLabel":"End time",
+  "ProfileSettingsForm.endTimePlaceholder":"00:00",
+  "ProfileSettingsForm.startTimeRequired": "start time require",
+  "ProfileSettingsForm.startTimeLabel":"start time",
+  "ProfileSettingsForm.startTimePlaceholder":"00:00",
+  "ProfileSettingsForm.practiceDateRequired":"Choose Date",
+  "ProfileSettingsForm.practiceDateLabel":"Date",
+  "ProfileSettingsForm.countryRequired":"Choose country",
+  "ProfileSettingsForm.statusPlaceholder":"Select status",
+  "ProfileSettingsForm.statusLabel":"Status",
+  "ProfileSettingsForm.statusRequired":"Choose status",
+  "ProfileSettingsForm.jurisdictionPracticeTitle":"Jurisdiction where certified to practice",
+  "ProfileSettingsForm.languagePlaceholder":"Select language",
+  "ProfileSettingsForm.languageRequired":"Select your language",
+  "ProfileSettingsForm.languageLabel":"Language",
+  "ProfileSettingsForm.lawyerLanguages":"Professional languages",
+  "ProfileSettingsForm.timeZoneRequired":"Select timezone",
+  "ProfileSettingsForm.timeZoneLabel":"Time Zone",
+  "ProfileSettingsForm.timeZonePlaceholder":"Select timezone",
+  "ProfileSettingsForm.rducationTitle":"Education",
+  "ProfileSettingsForm.institutePlaceholder":"e.g. New Jersy State University",
+  "ProfileSettingsForm.instituteRequired":"You need to add instution name",
+  "ProfileSettingsForm.instituteLabel":"Institution name",
+  "ProfileSettingsForm.degreeRequired":"You need to add degree",
+  "ProfileSettingsForm.degreeLabel":"Degree",
+  "ProfileSettingsForm.degreePlaceholder":"e.g. Juris Doctor",
+  "ProfileSettingsForm.graduationRequired":"Choose graduation year",
+  "ProfileSettingsForm.graduationLabel":"Graduation year",
+  "ProfileSettingsForm.graduationPlaceholder":"Select date",
+  "ProfileSettingsForm.practiceAreaTitle":"Practice area",
+  "ProfileSettingsForm.practiceAreaLabel":"Practice area",
+  "ProfileSettingsForm.practiceAreaRequired":"Please select practice area",
+  "ProfileSettingsForm.practiceAreaPlaceholder":"Enter practice area",
+  "ProfileSettingsForm.industiesTitle":"Industries (Optional)",
+  "ProfileSettingsForm.industryLabel":"Industry",
+  "ProfileSettingsForm.industryPlaceholder":"e.g. Transportation",
+  "ProfileSettingsForm.fromLabel":"From",
+  "ProfileSettingsForm.toLabel":"To",
+  "ProfileSettingsForm.recentWorkLabel":"Recent work",
+  "ProfileSettingsForm.recentWorkPlaceholder":"Write your recent work relevant to this industry"
 }
