lawyer profile setting design

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1159,7 +1159,8 @@
   "ProfileSettingsForm.endTimeLabel":"End time",
   "ProfileSettingsForm.endTimePlaceholder":"00:00",
   "ProfileSettingsForm.startTimeRequired": "start time require",
-  "ProfileSettingsForm.startTimeLabel":"start time",
+  "ProfileSettingsForm.startTimeLabel":"Start time",
+  "ProfileSettingsForm.DateLabel":"Date",
   "ProfileSettingsForm.startTimePlaceholder":"00:00",
   "ProfileSettingsForm.practiceDateRequired":"Choose Date",
   "ProfileSettingsForm.practiceDateLabel":"Date",
