--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1053,7 +1053,7 @@
   "TopbarMobileMenu.inboxLink": "Inbox",
   "TopbarMobileMenu.loginLink": "Log in",
   "TopbarMobileMenu.logoutLink": "Log out",
-  "TopbarMobileMenu.newListingLink": "Become a teacher",
+  "TopbarMobileMenu.newListingLink": "Join as a Client",
   "TopbarMobileMenu.profileSettingsLink": "User profile",
   "TopbarMobileMenu.signupLink": "Sign up",
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
