--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -221,14 +221,18 @@
   "EditListingAvailabilityPlanForm.updateFailed": "Failed to update. Please try again.",
   "EditListingDescriptionForm.certificateLabel": "Teaching certificate",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft. Please try again.",
-  "EditListingDescriptionForm.description": "Describe yourself and your yoga sessions",
-  "EditListingDescriptionForm.descriptionPlaceholder": "What kind of a teacher are you? What is included in your sessions?",
+  "EditListingDescriptionForm.oralDescription": "Consultation topic description",
+  "EditListingDescriptionForm.oralDescriptionPlaceholder": "Write a short description about the topic",
+  "EditListingDescriptionForm.serviceDescription": "Service description",
+  "EditListingDescriptionForm.serviceDescriptionPlaceholder": "Write a short description about the service",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
   "EditListingDescriptionForm.maxLength": "Must be {maxLength} characters or less",
   "EditListingDescriptionForm.showListingFailed": "Fetching teacher profile data failed",
-  "EditListingDescriptionForm.title": "Your name",
-  "EditListingDescriptionForm.titlePlaceholder": "What's your name?",
-  "EditListingDescriptionForm.titleRequired": "You need to add a name.",
+  "EditListingDescriptionForm.oralTitle": "Consultation topic title",
+  "EditListingDescriptionForm.oralTitlePlaceholder": "e.g. Consultation on employee contract",
+  "EditListingDescriptionForm.titleRequired": "You need to add a title.",
+  "EditListingDescriptionForm.serviceTitle": "Service title",
+  "EditListingDescriptionForm.serviceTitlePlaceholder": "Write service title",
   "EditListingDescriptionForm.updateFailed": "Failed to update. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Create teacher profile",
   "EditListingDescriptionPanel.listingTitle": "your teacher profile",
