signup client type done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1206,5 +1206,8 @@
   "ProfilePage.education":"Education",
   "Topbar.createListing":"+ Create consultation",
   "ProfileSettingsForm.descriptionPlaceholder":"Add description",
-  "ProfileSettingsForm.descriptionLabel":"Description"
+  "ProfileSettingsForm.descriptionLabel":"Description",
+  "SignupForm.clientTypeRequired":"This field is required",
+  "SignupForm.clientTypePlaceholder":"Choose account type",
+  "SignupForm.clientTypeLabel":"Register as"
 }
