all type listing done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -187,7 +187,7 @@
   "EditListingAvailabilityPanel.addException": "+ Add an exception",
   "EditListingAvailabilityPanel.availabilityExceptionsTitle": "Exceptions ({count})",
   "EditListingAvailabilityPanel.availabilityExceptionsTitleNoCount": "Exceptions",
-  "EditListingAvailabilityPanel.createListingTitle": "Set your availability",
+  "EditListingAvailabilityPanel.createListingTitle": "Availability",
   "EditListingAvailabilityPanel.dayOfWeek.fri": "Friday",
   "EditListingAvailabilityPanel.dayOfWeek.mon": "Monday",
   "EditListingAvailabilityPanel.dayOfWeek.sat": "Saturday",
@@ -195,7 +195,8 @@
   "EditListingAvailabilityPanel.dayOfWeek.thu": "Thursday",
   "EditListingAvailabilityPanel.dayOfWeek.tue": "Tuesday",
   "EditListingAvailabilityPanel.dayOfWeek.wed": "Wednesday",
-  "EditListingAvailabilityPanel.defaultScheduleTitle": "Default schedule",
+  "EditListingAvailabilityPanel.defaultScheduleTitle": "Change availability",
+  "EditListingAvailabilityPanel.subTitle":"Here is where you pick the recurring times that you will be available. If you get a booking request and you are no longer available, you can turn it down and arrange a different time.",
   "EditListingAvailabilityPanel.edit": "Edit",
   "EditListingAvailabilityPanel.exceptionAvailable": "Available",
   "EditListingAvailabilityPanel.exceptionNotAvailable": "Not available",
@@ -217,7 +218,7 @@
   "EditListingAvailabilityPlanForm.setHours": "Set hours",
   "EditListingAvailabilityPlanForm.startTimePlaceholder": "8:00",
   "EditListingAvailabilityPlanForm.timezonePickerTitle": "Choose a time zone",
-  "EditListingAvailabilityPlanForm.title": "Edit default schedule for {listingTitle}",
+  "EditListingAvailabilityPlanForm.title": "When you are available?",
   "EditListingAvailabilityPlanForm.updateFailed": "Failed to update. Please try again.",
   "EditListingDescriptionForm.certificateLabel": "Teaching certificate",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft. Please try again.",
@@ -273,7 +274,7 @@
   "EditListingPhotosForm.savedImageAltText": "Image saved",
   "EditListingPhotosForm.showListingFailed": "Fetching teacher profile data failed",
   "EditListingPhotosForm.updateFailed": "Failed to update. Please try again.",
-  "EditListingPhotosPanel.createListingTitle": "Add a few photos",
+  "EditListingPhotosPanel.createListingTitle": "Photo",
   "EditListingPhotosPanel.listingTitle": "your teacher profile",
   "EditListingPhotosPanel.title": "Edit the photos of {listingTitle}",
   "EditListingPoliciesForm.rulesLabel": "Yoga studio policies",
@@ -282,7 +283,7 @@
   "EditListingPoliciesForm.updateFailed": "Failed to update teacher profile. Please try again.",
   "EditListingPoliciesPanel.createListingTitle": "Time to set some policies for your sessions.",
   "EditListingPoliciesPanel.title": "Edit the policies of {listingTitle}",
-  "EditListingPricingForm.priceInputPlaceholder": "Choose your price…",
+  "EditListingPricingForm.priceInputPlaceholder": "Enter your price",
   "EditListingPricingForm.pricePerDay": "Price per day in euros",
   "EditListingPricingForm.pricePerNight": "Price per night in euros",
   "EditListingPricingForm.pricePerUnit": "Price per hour in dollars",
@@ -290,7 +291,7 @@
   "EditListingPricingForm.priceTooLow": "Price should be at least {minPrice}.",
   "EditListingPricingForm.showListingFailed": "Fetching listing data failed",
   "EditListingPricingForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingPricingPanel.createListingTitle": "How much do your sessions cost?",
+  "EditListingPricingPanel.createListingTitle": "Pricing",
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Currency in teacher profile is different from the marketplace currency. You cannot edit the price.",
   "EditListingPricingPanel.listingTitle": "your sessions",
   "EditListingPricingPanel.title": "Edit the pricing of {listingTitle}",
@@ -305,11 +306,11 @@
   "EditListingWizard.saveEditPhotos": "Save photos",
   "EditListingWizard.saveEditPolicies": "Save policies",
   "EditListingWizard.saveEditPricing": "Save pricing",
-  "EditListingWizard.saveNewDescription": "Next: Yoga styles",
+  "EditListingWizard.saveNewDescription": "Next: Client ID",
   "EditListingWizard.saveNewFeatures": "Next: Location",
   "EditListingWizard.saveNewLocation": "Next: Pricing",
   "EditListingWizard.saveNewAvailability": "Next: Photos",
-  "EditListingWizard.saveNewPhotos": "Publish teacher profile",
+  "EditListingWizard.saveNewPhotos": "Publish consultation",
   "EditListingWizard.saveNewPolicies": "Next: Location",
   "EditListingWizard.saveNewPricing": "Next: Availability",
   "EditListingWizard.tabLabelDescription": "Description",
@@ -1219,7 +1220,7 @@
   "EditListingWizard.tabLabelAreaOfLaw":"Area of Law",
   "EditListingWizard.tabLabelDuration":"Duration",
   "EditListingWizard.tabLabelClient":"Client ID",
-  "EditListingWizard.tabLabelDeadline":"Dead Line",
+  "EditListingWizard.tabLabelDeadline":"Deadline",
   "EditListingDescriptionPanel.publicOralTitle":"Oral Consultation Description",
   "EditListingDescriptionPanel.customOralTitle":"Custom Tailored Oral Consultation Description",
   "EditListingDescriptionPanel.customServiceTitle":"Custom Tailored Service Description",
@@ -1233,8 +1234,24 @@
   "EditListingWizard.saveNewDuration":"Next: Pricing",
   "EditListingWizard.saveEditDuration": " Save Duration",
   "EditListingDurationPanel.listingTitle":"Duration",
-  "EditListingDurationForm.title":"Enter duration",
+  "EditListingDurationForm.durationLabel":"Enter duration",
   "EditListingDurationForm.durationRequired":"Duration is required",
   "EditListingDurationForm.durationInvalid":"Invalid duration",
-  "EditListingDurationForm.durationPlaceholder": "Enter duration"
+  "EditListingDurationForm.durationPlaceholder": "Enter duration",
+  "EditListingPriceForm.pricingLabel":"Price in USD",
+  "EditListingWizard.saveNewcustomOralDescription": "Next: Client ID",
+  "EditListingClientIdPanel.listingTitle":"Client",
+  "EditListingClientIdForm.clientIdLabel":"Enter Client ID",
+  "EditListingClientIdForm.clientIdPlaceholder":"Type client ID",
+  "EditListingClientIdForm.clientIdRequired":"Client ID required",
+  "EditListingWizard.customOralSaveNewClient":"Next: Duration",
+  "EditListingWizard.saveEditClient":"Save Client ID",
+  "EditListingWizard.saveNewClient":"Next: Pricing",
+  "EditListingPricingForm.vatLabel":"Select VAT",
+  "EditListingClientIdForm.subTitle":"This will make this consultation only visible for following client ID",
+  "EditListingWizard.saveNewCustomOralPricing":"Next: Deadline",
+  "EditListingDeadlineForm.subTitle":"Please select a date by which you can deliver this service",
+  "EditListingDeadlinePanel.listingTitle":"Deadline",
+  "EditListingWizard.saveEditDeadline":"Save Deadline",
+  "EditListingWizard.saveNewDeadline":"Next: Photos"
 }
