auto listing creation after signup done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -427,7 +427,7 @@
   "ListingPage.closedListing": "This teacher profile has been closed and sessions can't be booked.",
   "ListingPage.contactUser": "Contact",
   "ListingPage.descriptionTitle": "Teacher profile",
-  "ListingPage.editListing": "Edit teacher profile",
+  "ListingPage.editListing": "Edit consultation",
   "ListingPage.editProfileLink": "Edit user profile",
   "ListingPage.errorLoadingListingMessage": "Could not load teacher profile. Please try again.",
   "ListingPage.errorLoadingListingTitle": "Error in loading teacher profile",
@@ -438,7 +438,7 @@
   "ListingPage.loadingListingTitle": "Loading teacher profile...",
   "ListingPage.locationTitle": "Location",
   "ListingPage.ownClosedListing": "Your teacher profile has been closed and sessions can't be booked.",
-  "ListingPage.ownListing": "This is your own teacher profile.",
+  "ListingPage.ownListing": "This is your own listing.",
   "ListingPage.ownListingDraft": "This teacher profile is a draft.",
   "ListingPage.ownListingPendingApproval": "This teacher profile is pending approval.",
   "ListingPage.perDay": "per day",
