social media schema changed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -409,8 +409,8 @@
   "KeywordFilter.placeholder": "Enter a keyword…",
   "KeywordFilterPlainForm.labelSelected": "Keyword",
   "KeywordFilterPlainForm.placeholder": "Enter a keyword…",
-  "LandingPage.schemaDescription": "Book private yoga lessons using Yogatime or earn income by teaching yoga",
-  "LandingPage.schemaTitle": "Book private yoga lessons everywhere | {siteTitle}",
+  "LandingPage.schemaDescription": "Find experienced lawyers you need. Anytime. Anywhere.",
+  "LandingPage.schemaTitle": "Find Legal Advice Online | {siteTitle}",
   "LayoutWrapperAccountSettingsSideNav.contactDetailsTabTitle": "Contact details",
   "LayoutWrapperAccountSettingsSideNav.passwordTabTitle": "Password",
   "LayoutWrapperAccountSettingsSideNav.paymentsTabTitle": "Payout details",
