promotion tab done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -467,13 +467,13 @@
   "LoginForm.passwordPlaceholder": "Enter your password…",
   "LoginForm.passwordRequired": "This field is required",
   "ManageListingCard.actionFailed": "Whoops, something went wrong. Please refresh the page and try again.",
-  "ManageListingCard.closeListing": "Close teacher profile",
-  "ManageListingCard.closedListing": "This teacher profile is closed and not visible on the marketplace.",
+  "ManageListingCard.closeListing": "Close consultation",
+  "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace.",
   "ManageListingCard.draftOverlayText": "{listingTitle} is a draft and can't be booked.",
-  "ManageListingCard.editListing": "Edit teacher profile",
-  "ManageListingCard.finishListingDraft": "Finish teacher profile",
+  "ManageListingCard.editListing": "Edit consultation",
+  "ManageListingCard.finishListingDraft": "Finish consultation",
   "ManageListingCard.manageAvailability": "Manage availability",
-  "ManageListingCard.openListing": "Open teacher profile",
+  "ManageListingCard.openListing": "Open consultation",
   "ManageListingCard.pendingApproval": "{listingTitle} is pending admin approval and can't be booked.",
   "ManageListingCard.perDay": "per day",
   "ManageListingCard.perNight": "per night",
@@ -1069,7 +1069,7 @@
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
   "TopbarMobileMenu.yourListingsLink": "Your teacher profile",
-  "TopbarSearchForm.placeholder": "Search teachers…",
+  "TopbarSearchForm.placeholder": "Search",
   "TopbarSearchForm.searchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district \"Manhattan\".",
   "TransactionPage.deletedListing": "deleted teacher profile",
   "TransactionPage.fetchOrderFailed": "Fetching order data failed.",
@@ -1215,7 +1215,7 @@
   "ProfilePage.workExp":"Work Experience",
   "ProfilePage.education":"Education",
   "Topbar.createListing":"+ Create consultation",
-  "ManageListingsPage.yourListings":"Manage Your Listings",
+  "UserNav.yourListings":"Manage Your Listings",
   "TopbarDesktop.manageListingsLink":"Manage your listings",
   "EditListingWizard.tabLabelAreaOfLaw":"Area of Law",
   "EditListingWizard.tabLabelDuration":"Duration",
@@ -1270,5 +1270,9 @@
   "ProfileSettingsForm.postalCodeLabel" :"Postal Code",
   "ProfileSettingsForm.postalCodePlaceholder" :"Postal code",
   "ProfileSettingsForm.postalCodeRequiredMessage":"This field is required",
-  "ProfileSettingsForm.cityLabel":"City"
+  "ProfileSettingsForm.cityLabel":"City",
+  "EditListingClientIdForm.addMoreClient":"+ Add More Client Id",
+  "PromotionPage.title":"Promotion Page",
+  "TopbarDesktop.promotionLink":"Promotion",
+  "UserNav.PromotionPage":"Promotion"
 }
