own listing request book removed bug fixed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -435,8 +435,8 @@
   "ListingPage.featuresTitle": "Yoga styles",
   "ListingPage.finishListing": "Finish teacher profile",
   "ListingPage.hostedBy": "Hosted by {name}",
-  "ListingPage.loadingListingMessage": "Loading teacher profile...",
-  "ListingPage.loadingListingTitle": "Loading teacher profile...",
+  "ListingPage.loadingListingMessage": "Loading consultation/service...",
+  "ListingPage.loadingListingTitle": "Loading consultation/service...",
   "ListingPage.locationTitle": "Location",
   "ListingPage.ownClosedListing": "Your teacher profile has been closed and sessions can't be booked.",
   "ListingPage.ownListing": "This is your own listing.",
