image for listings changed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -482,13 +482,13 @@
   "ManageListingCard.priceNotSet": "Price not set",
   "ManageListingCard.unsupportedPrice": "({currency})",
   "ManageListingCard.unsupportedPriceTitle": "Unsupported currency ({currency})",
-  "ManageListingCard.viewListing": "View teacher profile",
+  "ManageListingCard.viewListing": "View consultation",
   "ManageListingsPage.accountSettings": "Account settings",
-  "ManageListingsPage.loadingOwnListings": "Loading teacher profiles",
+  "ManageListingsPage.loadingOwnListings": "Loading consultation",
   "ManageListingsPage.noResults": "You don't have any listing.",
   "ManageListingsPage.profileSettings": "User profile",
   "ManageListingsPage.queryError": "Query failed. Please try again.",
-  "ManageListingsPage.title": "Manage your teacher profile",
+  "ManageListingsPage.title": "Manage your consultation",
   "ManageListingsPage.youHaveListings": "You have {count} {count, plural, one {listing} other {listings}}",
   "MapPriceMarker.unsupportedPrice": "({currency})",
   "Modal.close": "CLOSE",
